--- a/design.ui
+++ b/design.ui
@@ -51,28 +51,28 @@
        <item row="3" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>&amp;Gamemode adapter name</string>
+          <string>Gamemode adapter name</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Des&amp;ktop audio output</string>
+          <string>Desktop audio output</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Desktop adapter &amp;name</string>
+          <string>Desktop adapter name</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Ga&amp;memode audio output</string>
+          <string>Gamemode audio output</string>
          </property>
         </widget>
        </item>
@@ -93,6 +93,9 @@
          <property name="maximum">
           <number>1000</number>
          </property>
+         <property name="value">
+          <number>1000</number>
+         </property>
         </widget>
        </item>
        <item row="0" column="1" colspan="2">
@@ -104,7 +107,7 @@
        <item row="4" column="0">
         <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>W&amp;indow check rate</string>
+          <string>Window check rate</string>
          </property>
         </widget>
        </item>
